[FIX] web: emoji picker navbar manages overflow better
Before this commit, emoji navbar simply had `.overflow-auto`.
The size of emoji category depends on browser/OS for the style of
emoji, but browsers also differ in the way they render font unicodes.
This means that overflow never happens on some configuration, and
in a few of them it always occur.

The size of emoji picker container is good and we want to keep it
fixed, as it plays nicely with the rest of UI. For the size of
emojis, as long as we rely on font unicode, we have to live with the
different sizing.

This commit suggests a new way to manage overflow which doesn't show
a scroll bar while letting browser/OS choose their way to render
emojis: we detect whether emoji tabs overflow, and when so it fills
as most emoji it can without overflow. Navbar has many "panels",
and switching to panels happen either manually (click on >> and <<
buttons) or with scrolling of emoji picker without any search.

Commit also makes the following minor improvements:
- category section position sticky was not completely hiding emoji
  list below (e.g. on Chrome macOS). This is fixed with a
  `.align-self-stretch` on the section
- emoji categories are centered with emoji picker

Task-4413819

closes odoo/odoo#191463

X-original-commit: 5218a4b0b69b96a1d4df409307bc69b81475bcb5

--- a/addons/web/static/src/core/emoji_picker/emoji_picker.scss
+++ b/addons/web/static/src/core/emoji_picker/emoji_picker.scss
@@ -1,6 +1,6 @@
 .popover .o-EmojiPicker {
-    width: 285px;
-    height: 350px;
+    width: 300px;
+    height: 365px;
 }
 
 .o-EmojiPicker-content {
